promena u bazi i novi entity data model

--- a/ContactManager/ContactManager.Data/App.Config
+++ b/ContactManager/ContactManager.Data/App.Config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="ContactManagerDBEntities" connectionString="metadata=res://*/ContactManagerDB.csdl|res://*/ContactManagerDB.ssdl|res://*/ContactManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NLUGIC-PC;initial catalog=ContactManagerDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ContactManagerDBEntities1" connectionString="metadata=res://*/ContactManagerDB.csdl|res://*/ContactManagerDB.ssdl|res://*/ContactManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NLUGIC-PC;initial catalog=ContactManagerDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
