baza rekreirana po 1000. put

--- a/ContactManager/ContactManager.MainForm/ContactManager.MainForm.csproj
+++ b/ContactManager/ContactManager.MainForm/ContactManager.MainForm.csproj
@@ -79,6 +79,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContactManager.Data\ContactManager.Data.csproj">
+      <Project>{62dc376a-0e1c-4a9c-a0b4-c8c58cdea403}</Project>
+      <Name>ContactManager.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
