zavrsene sve zahtevane i neke opcione funkcionalnosti

--- a/ContactManager/ContactManager.MainForm/App.config
+++ b/ContactManager/ContactManager.MainForm/App.config
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ContactManagerDBEntities" connectionString="metadata=res://*/ContactManagerDB.csdl|res://*/ContactManagerDB.ssdl|res://*/ContactManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NLUGIC-PC;initial catalog=ContactManagerDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
